--- a/Views/Livroes/Details.cshtml
+++ b/Views/Livroes/Details.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LivroEditora)
+            @Html.DisplayNameFor(model => model.LivroEditarora)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LivroEditora)
+            @Html.DisplayFor(model => model.LivroEditarora)
         </dd>
 
         <dt>
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.LivroId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.LivroId }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
