--- a/Views/Exemplars/Details.cshtml
+++ b/Views/Exemplars/Details.cshtml
@@ -30,6 +30,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ExemplarId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ExemplarId }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
