--- a/Views/Usuarios/Delete.cshtml
+++ b/Views/Usuarios/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Alexandria.Models.Usuario
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Apagar";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Apagar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja apagar isso?</h3>
 <div>
     <h4>Usuario</h4>
     <hr />
@@ -66,8 +66,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Apagar" class="btn btn-default" /> |
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
