--- a/Views/Livroes/Details.cshtml
+++ b/Views/Livroes/Details.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LivroEditarora)
+            @Html.DisplayNameFor(model => model.LivroEditora)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LivroEditarora)
+            @Html.DisplayFor(model => model.LivroEditora)
         </dd>
 
         <dt>
